# ig-story-firebase-studio

./: .gitignore  README.md  middleware.ts  next.config.ts  package-lock.json  package.json
backend/: .gitignore  DOCKER_LOGGING.md  Dockerfile  ERROR_ANALYSIS.md  ERROR_LOGGING.md  GENERATE_10M_USERS.md  JSON_ERROR_HANDLING.md  LOAD_TEST_ANALYSIS.md  README.md  SETUP_DOCKER.md  TESTING.md  TEST_SUMMARY.md  docker-compose.production.yml  docker-compose.yml  ecs-task-definition.json  nest-cli.json  package-lock.json  package.json  tsconfig.json
backend-go/: Dockerfile  README.md  go.mod  go.sum  main.go
backend-rust/: Cargo.toml  Dockerfile  README.md
backend-rust/src/: auth.rs  cache.rs  config.rs  errors.rs  handlers.rs  main.rs  metrics.rs  models.rs
backend/load-test/: README.md  artillery-test.yml  (+7 more)
docs/: BOOK.md  LOAD_TEST_RESULTS_LATEST.md  audio-optimization.md  backend-performance-comparison.md  blueprint.md  build-for-s3-with-dev.md  deployment-architecture.md  deployment-guide.md  ec2-fargate-deployment.md  gc-comparison-nodejs-vs-go.md  import-data-guide.md  myisam-vs-innodb.md  performance-comparison-summary.md  performance-optimization-guide.md  production-recommendation-3m-users.md  realistic-load-testing.md  serverless-deployment.md  tracking-events.md
monitoring/: .gitignore  QUICK_START.md  README.local.md  README.md  START_LOCAL.md  docker-compose.local.yml  docker-compose.yml
public/: stories.json  sw.js
results/: forecap_2025_prototype.xlsx
scripts/: README.md  import-excel-to-mysql.py  setup-mysql-schema-lean.sql  setup-mysql-schema.sql
(+95 files in other folders)
