[package]
name = "forecap-backend-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.5"
actix-rt = "2.9"
dotenvy = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "3.7"
sqlx = { version = "0.7", features = ["runtime-tokio", "mysql", "chrono", "json", "rust_decimal"] }
rust_decimal = { version = "1.33", features = ["serde-with-str", "std"] }
tokio = { version = "1.37", features = ["rt-multi-thread", "macros"] }
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }
base64 = "0.22"
prometheus = "0.13"
once_cell = "1.19"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
anyhow = { version = "1.0", features = ["backtrace"] }
urlencoding = "2.1"

